# index.js
@@ -61,7 +61,7 @@ const swaggerUi = require('swagger-ui-express');
     */
     app.use("/", function(req, res, next) {
         // 세션 체크 공통 모듈
-        if(req.path === '/user' && req.method === 'POST') next();
+        if((req.path === '/user' && req.method === 'POST') || (req.path === '/user/password-temp' && req.method === 'PUT')) next();
         else {
             const sessionKey = req.get('sessionKey');
             if(sessionKey === req.session.id) {  // 세션 값이 있는 경우 ( 로그인이 되어있는 경우 )
